// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelBody renders with defaultProps 1`] = `
<div
  className="ax-panel__body"
>
  Lorem Ipsum
</div>
`;

exports[`PanelBody renders with horizontalAlign end 1`] = `
<div
  className="ax-panel__body ax-panel__body--horizontal-end"
>
  Lorem Ipsum
</div>
`;

exports[`PanelBody renders with horizontalAlign middle 1`] = `
<div
  className="ax-panel__body ax-panel__body--horizontal-middle"
>
  Lorem Ipsum
</div>
`;

exports[`PanelBody renders with horizontalAlign start 1`] = `
<div
  className="ax-panel__body ax-panel__body--horizontal-start"
>
  Lorem Ipsum
</div>
`;
